--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </div> 
    
-  <div class="container">
+  <div class="container card-container">
 
     <h2>Tools for sharing our faith</h2>
     <div class="tiles-grid">
