--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       </a>
       <a href="starters.html" class="tile">
         <span class="tile-icon">&#x1F4DD;</span>
-        
-<div>
+        <div>
           <h3 class="tile-title">Conversation Starters</h3>
           <p class="tile-subtitle">Tips on how to start a conversation to share the Gospel</p>
         </div>
@@ -69,6 +68,13 @@
         <div>
           <h3 class="tile-title">About Us</h3>
           <p class="tile-subtitle">Who we are, our mission, and how you could share in supporting that mission</p>
+        </div>
+      </a>
+      <a href="tips.html" class="tile">
+        <span class="tile-icon">&#x1F4D5;</span>
+        <div>
+          <h3 class="tile-title">Tips</h3>
+          <p class="tile-subtitle">Find useful tips on sharing your faith, like the book of Acts</p>
         </div>
       </a>
     </div>
