--- a/quick-answers.html
+++ b/quick-answers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <title>Quick Answers</title>
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            fetch('apologetics.json')
+            fetch('JSON/quick-answers.json')
                 .then(response => response.json())
                 .then(data => {
                     const categoriesContainer = document.getElementById('categories-container');
