--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
   <title>Quiz App</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
   <!-- Use div instead of header -->
@@ -27,6 +27,6 @@
   <div class="quiz-container">
     <div id="quiz"></div>
   </div>
-  <script src="quiz.js"></script>
+  <script src="JS/quiz.js"></script>
 </body>
 </html>
