--- a/starters.html
+++ b/starters.html
@@ -10,7 +10,7 @@
   <!-- Include Bootstrap JavaScript and Popper.js -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
-  <link href="styles.css" rel="stylesheet">
+  <link href="CSS/styles.css" rel="stylesheet">
   <!DOCTYPE html>
 <html>
 <head>
@@ -48,7 +48,7 @@
           </div>
         </div>
         <!-- Include custom JS -->
-        <script src="starters.js"></script>
+        <script src="JS/starters.js"></script>
       </div>
 
   </div>
