--- a/editor.html
+++ b/editor.html
@@ -221,7 +221,7 @@
                     explanations: ['', '', '', '']
                 },
                 message: '',
-                token: 'INSERT_TOKEN_HERE'
+                token: 'Jump857571111'
             }
         },
         created: function() {
@@ -493,8 +493,8 @@
                         questions: [],
                         newQuestion: {
                             question: '',
-                            skill: 'easy',
-                            choice1-text: '',
+                            skill: 'easy',                           
+choice1_text: '',
 choice2_text: '',
 choice3_text: '',
 choice4_text: '',
