temp disabled security

--- a/question-list.html
+++ b/question-list.html
@@ -41,7 +41,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        var url = "https://explainit/api/read.php";
+        var url = "https://explainit.app/api/read.php";
         var apiKey = '55556666';
 
         $.ajax({
