--- a/question-list.html
+++ b/question-list.html
@@ -6,101 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questions Report</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+        .import-btn-container {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="container">
         <h1>Questions Report</h1>
-
-        <div id="loading" class="text-center">
-            <h4>Loading questions...</h4>
-            <img src="https://i.imgur.com/2OeQg4W.gif" alt="Loading...">
+        <div class="import-btn-container">
+            <label class="btn btn-primary" for="importFile">
+                Import
+                <input type="file" id="importFile" accept=".json" style="display: none;" />
+            </label>
         </div>
-
-        <div id="error" class="text-center" style="display: none;">
-            <h4>Error loading questions</h4>
-            <p id="errorMessage"></p>
-        </div>
-
-        <div id="questions" style="display: none;">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Skill</th>
-                        <th>Question</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <tbody id="questionsBody">
-                </tbody>
-            </table>
-        </div>
+        <!-- Rest of the HTML code -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        var url = "https://explainit.app/api/read.php";
-        var apiKey = '55556666';
+        // Add the following function to handle file input change event
+        function importQuestionsFromFile(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    const jsonData = JSON.parse(e.target.result);
+                    let successCount = 0;
+                    let failureCount = 0;
+                    let failedIds = [];
 
-        $.ajax({
-            url: url,
-            type: "GET",
-            headers: {
-                "Authorization": "Bearer " + apiKey
-            },
-            success: function (response) {
-                console.log(response);
-                var questions = response;
-                var tableRows = "";
+                    const requests = jsonData.map((questionData) => {
+                        return new Promise((resolve, reject) => {
+                            $.ajax({
+                                url: 'https://explainit.app/api/create.php',
+                                type: 'POST',
+                                headers: {
+                                    'Authorization': 'Bearer ' + apiKey
+                                },
+                                contentType: 'application/json',
+                                data: JSON.stringify(questionData),
+                                success: function (response) {
+                                    console.log(response);
+                                    successCount++;
+                                    resolve();
+                                },
+                                error: function (jqXHR, textStatus, errorThrown) {
+                                    console.log(jqXHR);
+                                    console.log(textStatus);
+                                    console.log(errorThrown);
+                                    failureCount++;
+                                    failedIds.push(questionData.ID);
+                                    resolve();
+                                }
+                            });
+                        });
+                    });
 
-                questions.sort(function (a, b) {
-                    var skillA = a.skill.toUpperCase();
-                    var skillB = b.skill.toUpperCase();
-
-                    if (skillA < skillB) {
-                        return -1;
-                    }
-
-                    if (skillA > skillB) {
-                        return 1;
-                    }
-
-                    var questionA = a.question.toUpperCase();
-                    var questionB = b.question.toUpperCase();
-
-                    if (questionA < questionB) {
-                        return -1;
-                    }
-
-                    if (questionA > questionB) {
-                        return 1;
-                    }
-
-                    return 0;
-                });
-
-                for (var i = 0; i < questions.length; i++) {
-                    tableRows += "<tr><td>" + questions[i].skill + "</td>";
-                    tableRows += "<td>" + questions[i].question + "</td>";
-                    tableRows += "<td><a href=\"edit.php?id=" + questions[i].id + "\">Edit</a></td>";
-                    tableRows += "<td><a href=\"delete.php?id=" + questions[i].id + "\">Delete</a></td></tr>";
-                }
-
-                $("#questionsBody").html(tableRows);
-                $("#loading").hide();
-                $("#questions").show();
-            },
-            error: function (jqXHR, textStatus, errorThrown) {
-                console.log(jqXHR);
-                console.log(textStatus);
-                console.log(errorThrown);
-                $("#loading").hide();
-                $("#error").show();
-                $("#errorMessage").text("Status: " + jqXHR.status + " - " + jqXHR.statusText);
+                    Promise.all(requests).then(() => {
+                        const message = `Total records read: ${jsonData.length}\n` +
+                            `Successfully created: ${successCount}\n` +
+                            `Failed to create: ${failureCount}\n` +
+                            (failedIds.length > 0 ? `Failed IDs: ${failedIds.join(', ')}` : '');
+                        alert(message);
+                    });
+                };
+                reader.readAsText(file);
             }
-        });
+        }
+
+        // Add the event listener to the file input
+        document.getElementById('importFile').addEventListener('change', importQuestionsFromFile);
+
+        // Rest of the JavaScript code
     </script>
 
 </body>
