--- a/question-list.html
+++ b/question-list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +13,7 @@
         }
     </style>
 </head>
-
 <body>
-
     <div class="container">
         <h1>Questions Report</h1>
         <div class="import-btn-container">
@@ -25,7 +22,28 @@
                 <input type="file" id="importFile" accept=".json" style="display: none;" />
             </label>
         </div>
-        <!-- Rest of the HTML code -->
+        <div id="loading" class="text-center">
+            <h4>Loading questions...</h4>
+            <img src="https://i.imgur.com/2OeQg4W.gif" alt="Loading...">
+        </div>
+        <div id="error" class="text-center" style="display: none;">
+            <h4>Error loading questions</h4>
+            <p id="errorMessage"></p>
+        </div>
+        <div id="questions" style="display: none;">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Skill</th>
+                        <th>Question</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody id="questionsBody">
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -33,7 +51,6 @@
         var url = "https://explainit.app/api/read.php";
         var apiKey = '55556666';
 
-        // Add the following function to handle file input change event
         function importQuestionsFromFile(event) {
             const file = event.target.files[0];
             if (file) {
@@ -45,7 +62,7 @@
                     let failedIds = [];
 
                     const requests = jsonData.map((questionData) => {
-                        return new Promise((resolve, reject) => {
+                        return new Promise((resolve) => {
                             $.ajax({
                                 url: 'https://explainit.app/api/create.php',
                                 type: 'POST',
@@ -54,15 +71,11 @@
                                 },
                                 contentType: 'application/json',
                                 data: JSON.stringify(questionData),
-                                success: function (response) {
-                                    console.log(response);
+                                success: function () {
                                     successCount++;
                                     resolve();
                                 },
-                                error: function (jqXHR, textStatus, errorThrown) {
-                                    console.log(jqXHR);
-                                    console.log(textStatus);
-                                    console.log(errorThrown);
+                                error: function () {
                                     failureCount++;
                                     failedIds.push(questionData.ID);
                                     resolve();
@@ -83,20 +96,66 @@
             }
         }
 
-        // Add the event listener to the file input
         document.getElementById('importFile').addEventListener('change', importQuestionsFromFile);
 
-        // Rest of the JavaScript code for loading questions
         $.ajax({
             url: url,
             type: "GET",
             headers: {
+               
                 "Authorization": "Bearer " + apiKey
-            },
-            // Rest of the code for loading questions
-        });
-    </script>
+        },
+        success: function (response) {
+            console.log(response);
+            var questions = response;
+            var tableRows = "";
 
+            questions.sort(function (a, b) {
+                var skillA = a.skill.toUpperCase();
+                var skillB = b.skill.toUpperCase();
+
+                if (skillA < skillB) {
+                    return -1;
+                }
+
+                if (skillA > skillB) {
+                    return 1;
+                }
+
+                var questionA = a.question.toUpperCase();
+                var questionB = b.question.toUpperCase();
+
+                if (questionA < questionB) {
+                    return -1;
+                }
+
+                if (questionA > questionB) {
+                    return 1;
+                }
+
+                return 0;
+            });
+
+            for (var i = 0; i < questions.length; i++) {
+                tableRows += "<tr><td>" + questions[i].skill + "</td>";
+                tableRows += "<td>" + questions[i].question + "</td>";
+                tableRows += "<td><a href=\"edit.php?id=" + questions[i].id + "\">Edit</a></td>";
+                tableRows += "<td><a href=\"delete.php?id=" + questions[i].id + "\">Delete</a></td></tr>";
+            }
+
+            $("#questionsBody").html(tableRows);
+            $("#loading").hide();
+            $("#questions").show();
+        },
+        error: function (jqXHR, textStatus, errorThrown) {
+            console.log(jqXHR);
+            console.log(textStatus);
+            console.log(errorThrown);
+            $("#loading").hide();
+            $("#error").show();
+            $("#errorMessage").text("Status: " + jqXHR.status + " - " + jqXHR.statusText);
+        }
+    });
+</script>
 </body>
-
 </html>
