--- a/question-list.html
+++ b/question-list.html
@@ -53,7 +53,7 @@
                         // Sort questions by skill level and alphanumerically
                         category.questions.sort(sortBySkillLevelAndQuestion);
 
-                        const categoryItem = document.createElement('div');
+                        const categoryItem = documentcreateElement('div');
                         categoryItem.classList.add('accordion-item');
 
                         const categoryHeader = document.createElement('h2');
@@ -162,3 +162,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
