--- a/question-list.html
+++ b/question-list.html
@@ -3,164 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <title>Quick Answers</title>
-    <!-- Include Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/bootstrap-icons.css">
+    <title>Questions Report</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+        .import-btn-container {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div id="header">
-        <div class="header-content">
-            <a href="index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-house" viewBox="0 0 16 16">
-                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
-                </svg>
-            </a>
-            <h1>Quick Answers</h1>
+    <div class="container">
+        <h1>Questions Report</h1>
+        <div class="import-btn-container">
+            <label class="btn btn-primary" for="importFile">
+                Import
+                <input type="file" id="importFile" accept=".json" style="display: none;" />
+            </label>
+        </div>
+        <div id="loading" class="text-center">
+            <h4>Loading questions...</h4>
+            <img src="https://i.imgur.com/2OeQg4W.gif" alt="Loading...">
+        </div>
+        <div id="error" class="text-center" style="display: none;">
+            <h4>Error loading questions</h4>
+            <p id="errorMessage"></p>
+        </div>
+        <div id="questions" style="display: none;">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Skill</th>
+                        <th>Question</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody id="questionsBody">
+                </tbody>
+            </table>
         </div>
     </div>
 
-    <div class="container my-5">
-        <div class="card p-3">
-          <header class="text-center py-4">
-          </header>
-          <h4>Know how to answer typical questions we're asked when sharing the gospel. </h4>
-          <h4>Click on a topic to see the questions and then click the questions needed</h4>
-          <div id="categories-container" class="accordion"></div>
-        </div>
-    </div>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        function sortBySkillLevelAndQuestion(a, b) {
-            const skillLevels = { easy: 1, medium: 2, hard: 3 };
-            if (skillLevels[a.skill] < skillLevels[b.skill]) {
-                return -1;
-            } else if (skillLevels[a.skill] > skillLevels[b.skill]) {
-                return 1;
-            } else {
-                return a.question.localeCompare(b.question);
+        var url = "https://explainit.app/api/read.php";
+        var apiKey = '55556666';
+
+        function importQuestionsFromFile(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    const jsonData = JSON.parse(e.target.result);
+                    let successCount = 0;
+                    let failureCount = 0;
+                    let failedIds = [];
+
+                    const requests = jsonData.map((questionData) => {
+                        return new Promise((resolve) => {
+                            $.ajax({
+                                url: 'https://explainit.app/api/create.php',
+                                type: 'POST',
+                                headers: {
+                                    'Authorization': 'Bearer ' + apiKey
+                                },
+                                contentType: 'application/json',
+                                data: JSON.stringify(questionData),
+                                success: function () {
+                                    successCount++;
+                                    resolve();
+                                },
+                                error: function () {
+                                    failureCount++;
+                                    failedIds.push(questionData.ID);
+                                    resolve();
+                                }
+                            });
+                        });
+                    });
+
+                    Promise.all(requests).then(() => {
+                        const message = `Total records read: ${jsonData.length}\n` +
+                            `Successfully created: ${successCount}\n` +
+                            `Failed to create: ${failureCount}\n` +
+                            (failedIds.length > 0 ? `Failed IDs: ${failedIds.join(', ')}` : '');
+                        alert(message);
+                    });
+                };
+                reader.readAsText(file);
             }
         }
 
-        document.addEventListener('DOMContentLoaded', function () {
-            fetch('JSON/quick-answers.json')
-                .then(response => response.json())
-                .then(data => {
-                    const categoriesContainer = document.getElementById('categories-container');
+        document.getElementById('importFile').addEventListener('change', importQuestionsFromFile);
 
-                    data.categories.forEach((category, index) => {
-                        // Sort questions by skill level and alphanumerically
-                        category.questions.sort(sortBySkillLevelAndQuestion);
+        // Define a function to handle the "Delete" link click
+event
+function deleteQuestion(id) {
+// Send
+$.ajax({
+url: 'https://explainit.app/api/delete.php',
+type: 'DELETE',
+headers: {
+'Authorization': 'Bearer ' + apiKey,
+'Content-Type': 'application/json'
+},
+data: JSON.stringify({ id: id }),
+success: function (response) {
+console.log(response);
+alert('Question deleted successfully.');
+// Reload the questions after deleting the record
+loadQuestions();
+},
+error: function (jqXHR, textStatus, errorThrown) {
+console.log(jqXHR);
+console.log(textStatus);
+console.log(errorThrown);
+alert('Unable to delete question.');
+}
+});
+}
+    function loadQuestions() {
+        $.ajax({
+            url: url,
+            type: "GET",
+            headers: {
+                "Authorization": "Bearer " + apiKey
+            },
+            success: function (response) {
+                console.log(response);
+                var questions = response;
+                var tableRows = "";
 
-                        const categoryItem = documentcreateElement('div');
-                        categoryItem.classList.add('accordion-item');
+                questions.sort(function (a, b) {
+                    var skillOrder = { "easy": 1, "medium": 2, "hard": 3 };
+                    var skillA = skillOrder[a.skill.toLowerCase()] || 0;
+                    var skillB = skillOrder[b.skill.toLowerCase()] || 0;
 
-                        const categoryHeader = document.createElement('h2');
-                        categoryHeader.classList.add('accordion-header');
-                        categoryHeader.setAttribute('id', `category-heading-${index}`);
+                    if (skillA !== skillB) {
+                        return skillA - skillB;
+                    }
 
-                        const categoryButton = document.createElement('button');
-                        categoryButton.classList.add('accordion-button', 'collapsed');
-                        categoryButton.setAttribute('type', 'button');
-                        categoryButton.setAttribute('data-bs-toggle', 'collapse');
-                        categoryButton.setAttribute('data-bs-target', `#category-collapse-${index}`);
-                        category
-                        categoryButton.setAttribute('aria-expanded', 'false');
-                        categoryButton.setAttribute('aria-controls', `category-collapse-${index}`);
-                        categoryButton.textContent = category.title;
+                    var questionA = a.question.toUpperCase();
+                    var questionB = b.question.toUpperCase();
 
-                        // Append categoryButton to categoryHeader
-                        categoryHeader.appendChild(categoryButton);
+                    if (questionA < questionB) {
+                        return -1;
+                    }
 
-                        // Create a div for the category-collapse
-                        const categoryCollapse = document.createElement('div');
-                        categoryCollapse.classList.add('accordion-collapse', 'collapse');
-                        categoryCollapse.setAttribute('id', `category-collapse-${index}`);
-                        categoryCollapse.setAttribute('data-bs-parent', '#categories-container');
+                    if (questionA > questionB) {
+                        return 1;
+                    }
 
-                        // Create a div for the category-body
-                        const categoryBody = document.createElement('div');
-                        categoryBody.classList.add('accordion-body');
-
-                        // Create a div for the questions accordion
-                        const questionsAccordion = document.createElement('div');
-                        questionsAccordion.classList.add('accordion');
-                        questionsAccordion.setAttribute('id', `questions-accordion-${index}`);
-
-                        category.questions.forEach((questionData, questionIndex) => {
-                            const questionItem = document.createElement('div');
-                            questionItem.classList.add('accordion-item');
-
-                            const questionHeader = document.createElement('h2');
-                            questionHeader.classList.add('accordion-header');
-                            questionHeader.setAttribute('id', `question-heading-${index}-${questionIndex}`);
-
-                            const questionButton = document.createElement('button');
-                            questionButton.classList.add('accordion-button', 'collapsed');
-                            questionButton.setAttribute('type', 'button');
-                            questionButton.setAttribute('data-bs-toggle', 'collapse');
-                            questionButton.setAttribute('data-bs-target', `#question-collapse-${index}-${questionIndex}`);
-                            questionButton.setAttribute('aria-expanded', 'false');
-                            questionButton.setAttribute('aria-controls', `question-collapse-${index}-${questionIndex}`);
-                            questionButton.textContent = questionData.question;
-
-                            // Append questionButton to questionHeader
-                            questionHeader.appendChild(questionButton);
-
-                            // Create a div for the question-collapse
-                            const questionCollapse = document.createElement('div');
-                            questionCollapse.classList.add('accordion-collapse', 'collapse');
-                            questionCollapse.setAttribute('id', `question-collapse-${index}-${questionIndex}`);
-                            questionCollapse.setAttribute('data-bs-parent', `#questions-accordion-${index}`);
-
-                            // Create a div for the question-body
-                            const questionBody = document.createElement('div');
-                            questionBody.classList.add('accordion-body');
-
-                            // Create a p element for the answer text
-                            const answerText = document.createElement('p');
-                            answerText.textContent = questionData.answer;
-                            questionBody.appendChild(answerText);
-
-                            // Create an a element for the answer link
-                            const answerLink = document.createElement('a');
-                            answerLink.href = questionData.link;
-                            answerLink.textContent = 'Read more';
-                            questionBody.appendChild(answerLink);
-
-                            // Append questionBody to questionCollapse
-                            questionCollapse.appendChild(questionBody);
-
-                            // Append questionHeader and questionCollapse to questionItem
-                            questionItem.appendChild(questionHeader);
-                            questionItem.appendChild(questionCollapse);
-
-                            // Append questionItem to questionsAccordion
-                            questionsAccordion.appendChild(questionItem);
-                        });
-
-                        // Append questionsAccordion to categoryBody
-                        categoryBody.appendChild(questionsAccordion);
-
-                        // Append categoryBody to categoryCollapse
-                        categoryCollapse.appendChild(categoryBody);
-
-                        // Append categoryHeader and categoryCollapse to categoryItem
-                        categoryItem.appendChild(categoryHeader);
-                        categoryItem.appendChild(categoryCollapse);
-
-                        // Append categoryItem to categories container
-                        categoriesContainer.appendChild(categoryItem);
-                    });
+                    return 0;
                 });
-        });
-    </script>
 
-    <!-- Include Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+                for (var i = 0; i < questions.length; i++) {
+                    tableRows += "<tr><td>" + questions[i].skill + "</td>";
+                    tableRows += "<td>" + questions[i].question + "</td>";
+                    tableRows += "<td><a href=\"edit.php?id=" + questions[i].id + "\">Edit</a></td>";
+                    // Add a "Delete" link with the deleteQuestion function call and the question ID
+                    tableRows += "<td><a href=\"javascript:void(0)\" onclick=\"deleteQuestion(" + questions[i].id + ")\">Delete</a></td></tr>";
+                }
+
+                $("#questionsBody").html(tableRows);
+                $("#loading").hide();
+                $("#questions").show();
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.log(jqXHR);
+                console.log(textStatus);
+                console.log(errorThrown);
+                $("#loading").hide();
+                $("#error").show();
+                $("#errorMessage").text("Status: " + jqXHR.status + " - " + jqXHR.statusText);
+            }
+        });
+    }
+
+    // Call the loadQuestions function to initially load the questions
+    loadQuestions();
+</script>
 </body>
 </html>
-
-
