--- a/question-list.html
+++ b/question-list.html
@@ -100,30 +100,9 @@
 
         // Define a function to handle the "Delete" link click
 event
-function deleteQuestion(id) {
-// Send
-$.ajax({
-url: 'https://explainit.app/api/delete.php',
-type: 'DELETE',
-headers: {
-'Authorization': 'Bearer ' + apiKey,
-'Content-Type': 'application/json'
-},
-data: JSON.stringify({ id: id }),
-success: function (response) {
-console.log(response);
-alert('Question deleted successfully.');
-// Reload the questions after deleting the record
-loadQuestions();
-},
-error: function (jqXHR, textStatus, errorThrown) {
-console.log(jqXHR);
-console.log(textStatus);
-console.log(errorThrown);
-alert('Unable to delete question.');
-}
-});
-}
+
+
+
     function loadQuestions() {
         $.ajax({
             url: url,
@@ -185,5 +164,7 @@ alert('Unable to delete question.');
     // Call the loadQuestions function to initially load the questions
     loadQuestions();
 </script>
+
+<script src="deletequestion.html"></script>
 </body>
 </html>
