--- a/question-list.html
+++ b/question-list.html
@@ -165,6 +165,6 @@ event
     loadQuestions();
 </script>
 
-<script src="deletequestion.html"></script>
+<script src="deletequestion.js"></script>
 </body>
 </html>
