--- a/question-list.html
+++ b/question-list.html
@@ -139,12 +139,15 @@ event
                 });
 
                 for (var i = 0; i < questions.length; i++) {
-                    tableRows += "<tr><td>" + questions[i].skill + "</td>";
-                    tableRows += "<td>" + questions[i].question + "</td>";
-                    tableRows += "<td><button class='btn btn-primary btn-sm editButton' data-id='" + questions[i].id + "'>Edit</button></td>";
-                    // Add a "Delete" link with the deleteQuestion function call and the question ID
-                    tableRows += "<td><a href=\"javascript:void(0)\" onclick=\"deleteQuestion(" + questions[i].id + ")\">Delete</a></td></tr>";
-                }
+  // Define string literals with single quotes instead of double quotes
+  tableRows += '<tr><td>' + questions[i].skill + '</td>';
+  tableRows += '<td>' + questions[i].question + '</td>';
+  // Replace the double quotes and use single quotes instead
+  tableRows += '<td><a href="javascript:void(0)" class="edit-question-link" data-question-id="' + questions[i].id + '">Edit</a></td>';
+  // Use the correct HTML structure for the delete link
+  tableRows += '<td><a href="javascript:void(0)" onclick="deleteQuestion(' + questions[i].id + ')">Delete</a></td></tr>';
+}
+
 
                 $("#questionsBody").html(tableRows);
                 $("#loading").hide();
@@ -167,5 +170,13 @@ event
 
 <script src="deletequestion.js"></script>
 <script src="editquestion.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+$("#questionsBody").on("click", ".edit-question-link", function() {
+    const questionId = $(this).data("question-id");
+    openEditQuestionModal(questionId);
+});
+
 </body>
 </html>
