--- a/crudapp/index.html
+++ b/crudapp/index.html
@@ -6,10 +6,17 @@
     <title>Quiz Question Manager</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    
+
+  </head>
 <body>
     <div class="container">
         <h1 class="my-4">Quiz Question Manager</h1>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#questionModal">
+          Create Question
+        </button>
         <table class="table">
             <thead>
                 <tr>
@@ -27,5 +34,40 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
-</body>
-</html>
+    <div class="modal fade" id="questionModal" tabindex="-1" aria-labelledby="questionModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="questionModalLabel">Create Question</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="questionForm">
+              <div class="form-group">
+                  <label for="date_reviewed">Date Reviewed</label>
+                  <input type="date" class="form-control" name="date_reviewed" required>
+              </div>
+              <div class="form-group">
+                  <label for="question">Question</label>
+                  <textarea class="form-control" name="question" required></textarea>
+              </div>
+              <div class="form-group">
+                  <label for="skill">Skill</label>
+                        <select class="form-control" name="skill" required>
+                        <option value="easy">Easy</option>
+                        <option value="medium">Medium</option>
+                        <option value="hard">Hard</option>
+                    </select>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" id="saveQuestionBtn">Save Question</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
+  </html>
+  
