tesing release 5 counts of questions

--- a/crudapp/index.html
+++ b/crudapp/index.html
@@ -116,5 +116,10 @@
         </div>
       </div>
     </div>
+    <!-- Add this right before the closing body tag -->
+<footer class="container mt-5">
+  <p>Question Count: <span id="questionCount">0</span></p>
+</footer>
+
   </body>
 </html>
