--- a/crudapp/index.html
+++ b/crudapp/index.html
@@ -14,6 +14,14 @@
 <body>
     <div class="container">
         <h1 class="my-4">Quiz Question Manager</h1>
+        <div class="container">
+          <div class="d-flex justify-content-between align-items-center my-4">
+              <h1>Quiz Question Manager</h1>
+              <p class="mb-0">Question Count: <span id="questionCount">Easy: 0, Medium: 0, Hard: 0</span></p>
+          </div>
+
+      </div>
+      
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#questionModal">
           Create Question
         </button>
@@ -116,10 +124,6 @@
         </div>
       </div>
     </div>
-    <!-- Add this right before the closing body tag -->
-<footer class="container mt-5">
-  <p>Question Count: <span id="questionCount">0</span></p>
-</footer>
 
   </body>
 </html>
