better site layouts

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
       <h1>explain it app</h1>
     </div>
   </div> 
-   
+    <!-- Add the hero area -->
+  <div class="hero">
+    <h1>Tools for sharing our faith</h1>
+  </div>
   <div class="container card-container">
 
-    <h2>Tools for sharing our faith</h2>
+    <h2></h2>
     <div class="tiles-grid">
       <a href="quick-answers.html" class="tile">
         <span class="tile-icon">&#x1F4AC;</span>
