--- a/quick-answers.html
+++ b/quick-answers.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="path/to/bootstrap-icons.css">
 </head>
 <body>
+    
     <div id="header">
         <div class="header-content">
             <a href="index.html">
@@ -20,13 +21,23 @@
             <h1>Quick Answers</h1>
         </div>
     </div>
-
+<!-- Add the hero area -->
+<div class="hero">
+    <h2>Know how to answer typical questions we're asked when sharing the gospel.
+        Click on a topic to see the questions and then click the questions needed<h2>
+  </div>
     <div class="container my-5">
+        <style>
+            .container {
+                width: 95%;
+                max-width: none;
+                margin-top: 0px;
+            }
+        </style>
         <div class="card p-3">
           <header class="text-center py-4">
           </header>
-          <h4>Know how to answer typical questions we're asked when sharing the gospel. </h4>
-          <h4>Click on a topic to see the questions and then click the questions needed</h4>
+
           <div id="categories-container" class="accordion"></div>
         </div>
     </div>
