qa content api checks

--- a/quick-answers.html
+++ b/quick-answers.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <title>Quick Answers</title>
     <!-- Include Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="path/to/bootstrap-icons.css">
 </head>
 <body>
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Include quick-answers.js -->
-    <script src="quick-answers.js"></script>
+    <script src="JS/quick-answers.js"></script>
 
     <!-- Include Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
