--- a/qaquescrud.html
+++ b/qaquescrud.html
@@ -58,9 +58,9 @@
                     <form id="add-question-form">
                         <input type="hidden" name="id" value="">
                         <div class="mb-3">
-                            <label for="category_id" class="form-label">Category ID*</label>
-                            <input type="number" class="form-control" id="category_id" name="category_id" required>
-                        </div>
+                            <label for="category" class="form-label">Category*</label>
+                            <input type="text" class="form-control" id="category" name="category" required>
+                          </div>
                         <div class="mb-3">
                             <label for="question" class="form-label">Question*</label>
                             <input type="text" class="form-control" id="question" name="question" required>
@@ -77,9 +77,9 @@
                     <form id="edit-question-form" style="display:none;">
                         <input type="hidden" id="edit-question-id" name="id" value="">
                         <div class="mb-3">
-                            <label for="edit-category_id" class="form-label">Category ID*</label>
-                            <input type="number" class="form-control" id="edit-category_id" name="category_id" required>
-                        </div>
+                            <label for="edit-category" class="form-label">Category*</label>
+                            <input type="text" class="form-control" id="edit-category" name="category" required>
+                          </div>
                         <div class="mb-3">
                             <label for="edit-question" class="form-label">Question*</label>
                             <input type="text" class="form-control" id="edit-question" name="question" required>
