--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div> 
     <!-- Add the hero area -->
   <div class="hero">
-    <h1>Tools for sharing  faith</h1>
+    <h1>Tools for sharing our faith</h1>
   </div>
   <div class="container card-container">
 
